--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=smartpro-rest-api
+
+server.port=8085
+
+spring.datasource.url=jdbc:sqlserver://localhost;trustServerCertificate=true;databaseName=sipro
+spring.datasource.username=sa
+spring.datasource.password=P@ssw0rd
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.properties.hibernate.column_ordering_strategy=legacy
