--- a/src/main/resources/other.properties
+++ b/src/main/resources/other.properties
@@ -2,4 +2,4 @@ enable.log.file=y
 enable.automation.testing=y
 smtp.enable=n
 default.pagination.size=100
-enable.print.console=n
+enable.print.console=y
