Updated generate JWT token issue fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.datasource.username=0f2b74230d5d715cf09793ccaa81ccea
 spring.datasource.password=271a2d7f4d0bc8a1b98963fbb283461c
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.column_ordering_strategy=legacy
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.ddl
+spring.jpa.properties.javax.persistence.schema-generation.scripts.drop-target=drop.ddl
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
