--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
 		<poi-version>5.4.0</poi-version>
 	</properties>
 	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.39.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>html2pdf</artifactId>
